--- a/stock/index.html
+++ b/stock/index.html
@@ -73,7 +73,7 @@
                     <th id="type">Trade Type</th>
                     <th id="dur">Approx.Duration</th>
                     <th id="risk">Risk Level</th>
-                    <th id="comment">Other Commnet</th>
+                    <th id="comment">Other Comment</th>
                 </tr>
                 <tbody id="myTable" >
                     <div id="txtValue"></div>
