updating some changes

--- a/stock/index.html
+++ b/stock/index.html
@@ -10,6 +10,7 @@
     <!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">  -->
 </head>
 <body>
+    <img src="images/1140-bull-and-bear-illustration-with-stock-chart.jpg">
     <header>
         <a href="index.html">
             <h1 id="logo">TradeBook</h1>
